# move2ts

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/brainstorms/: 2026-03-21-move2ts-brainstorm.md  2026-03-22-vecmap-support-requirements.md
docs/plans/: 2026-03-21-001-feat-move2ts-codegen-cli-plan.md  2026-03-21-002-feat-events-type-generation-plan.md  2026-03-22-001-feat-vecmap-support-plan.md
docs/solutions/architecture/: move-compiler-git-dependency.md  singleton-detection-in-move.md
docs/solutions/build-errors/: cargo-version-mismatch-git-tag.md
docs/solutions/integration-issues/: sui-sdk-transaction-types.md
docs/solutions/logic-errors/: codegen-bcs-type-mapping-and-nested-expansion.md  event-field-naming-convention.md  move-type-to-ts-type-resolution.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/move2ts/: package.json
npm/win32-x64/: package.json
src/: analyzer.rs  cli.rs  codegen.rs  driver.rs  ir.rs  lib.rs  main.rs  parser.rs
tests/: integration_test.rs
tests/fixtures/: defi.move  events.move  marketplace.move  pure_structs.move  vecmap.move
tests/ts-check/: package.json  pnpm-lock.yaml  tsconfig.json
