[package]
name = "move2ts"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
convert_case = "0.7"

# Move compiler crates — git dep pinned to Sui release tag
# To update Move version: change rev to new commit/tag
move-compiler = { git = "https://github.com/MystenLabs/sui.git", rev = "585d7a076f990fa1ba8760e39883ddfc99b9276e" }
move-ir-types = { git = "https://github.com/MystenLabs/sui.git", rev = "585d7a076f990fa1ba8760e39883ddfc99b9276e" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui.git", rev = "585d7a076f990fa1ba8760e39883ddfc99b9276e" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui.git", rev = "585d7a076f990fa1ba8760e39883ddfc99b9276e" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "585d7a076f990fa1ba8760e39883ddfc99b9276e" }

[dev-dependencies]
insta = "1"
